--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       filters: stat # wall \u82E5\u5F00\u542F wall\uFF0C\u4F1A\u628A if \u4E2D\u7684 and \u5224\u65AD\u4E3A\u6CE8\u5165\u8FDB\u884C\u62E6\u622A
       # \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-    url: jdbc:mysql://47.106.146.227:3306/flowable?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://47.106.146.227:3306/flowable?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
